# OOP_Lab1

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  makefile
src/: main.cpp  program.cpp  program.hpp
src/libs/export/: export.cpp  export.hpp
src/libs/graph/: graph.cpp  graph.hpp
tests/: test.cpp  test.hpp
tests/answers/: test1.dot  test2.dot
tests/class_tests/: class_tests.cpp
tests/export_tests/: export_tests.cpp
